fine html e css

--- a/index.html
+++ b/index.html
@@ -57,13 +57,69 @@
                 <div class="nome">cat</div>
             </div>
 
+            <!-- horse -->
             <div class="icona">
-                <i class="fas fa-cat"></i>
+                <i class="fas fa-horse"></i>
                 <div class="nome">cat</div>
             </div>
 
+            <!-- hippopotamo -->
             <div class="icona">
-                <i class="fas fa-cat"></i>
+                <i class="fas fa-hippo"></i>
+                <div class="nome">cat</div>
+            </div>
+            
+            <!-- fish -->
+            <div class="icona">
+                <i class="fas fa-fish"></i>
+                <div class="nome">cat</div>
+            </div>
+
+            <!-- carrot -->
+            <div class="icona">
+                <i class="fas fa-carrot"></i>
+                <div class="nome">cat</div>
+            </div>
+
+            <!-- apple -->
+            <div class="icona">
+                <i class="fas fa-apple-alt"></i>
+                <div class="nome">cat</div>
+            </div>
+
+             <!-- lemon -->
+            <div class="icona">
+                <i class="fas fa-lemon"></i>
+                <div class="nome">cat</div>
+            </div>
+
+            <!-- pepper -->
+            <div class="icona">
+                <i class="fas fa-pepper-hot"></i>
+                <div class="nome">cat</div>
+            </div>
+
+            <!-- user-austronaut -->
+            <div class="icona">
+                <i class="fas fa-user-astronaut"></i>
+                <div class="nome">cat</div>
+            </div>
+
+             <!-- user-graduate -->
+            <div class="icona">
+                <i class="fas fa-user-graduate"></i>
+                <div class="nome">cat</div>
+            </div>
+
+            <!-- user-ninja -->
+            <div class="icona">
+                <i class="fas fa-user-ninja"></i>
+                <div class="nome">cat</div>
+            </div>
+
+             <!-- user-secret -->
+            <div class="icona">
+                <i class="fas fa-user-secret"></i>
                 <div class="nome">cat</div>
             </div>
         </div>
